tests/errors/binding/invoke.fil
comp main<G:1>() -> (out: [G, G+1] 32) {
    out = add.out;
}