tests/errors/binding/invoke.expect
---CODE---
1
---STDERR---
error: undefined invocation name: add
  ┌─ tests/errors/binding/invoke.fil:2:11
  │
2 │     out = add.out;
  │           ^^^ invocation `add' is not defined

Compilation failed with 1 errors.
Run with --show-models to generate assignments for failing constraints.
